feat: Implement two-phase export workflow with intelligent array reference handling
- Created separate discovery and export phases for better control
- Added JSON configuration that can be manually edited between phases
- Implemented smart array reference resolution (both direct ObjectIds and nested)
- Arrays now properly lookup and display referenced collection values
- Auto-detects best display field from referenced collections
- Supports comma-separated sorted values or first value display modes
- Updated documentation to reflect new workflow

The system now properly handles arrays like lifestyles and tags, looking up
referenced documents and extracting readable names instead of ObjectIds.